# try-tauri-app-onvif-cameras-viewer

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: camera_plugin.rs  commands.rs  db.rs  encoder.rs  gpu_detector.rs  lib.rs  main.rs  models.rs  onvif.rs  scheduler.rs  stream.rs
src-tauri/src/plugins/: mod.rs  onvif_plugin.rs  uvc_plugin.rs
src/components/: AddCameraModal.tsx  CameraList.tsx  CronExpressionBuilder.tsx  DiscoverCamerasModal.tsx  EncoderSettings.tsx  PTZControls.tsx  RecordingList.tsx  ScheduleRecording.tsx  VideoPlayer.tsx
src/services/: api.ts
