[package]
name = "tauri-onvif-viewer"
version = "0.1.0"
description = "ONVIF Camera Viewer using Tauri"
authors = ["aktnk"]
edition = "2021"

[lib]
name = "tauri_onvif_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
roxmltree = "0.20"
regex = "1"
thiserror = "1"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1.0"
url = "2.5.7"
local-ip-address = "0.6.5"
futures = "0.3.31"
urlencoding = "2.1.3"
sha1 = "0.10.6"
base64 = "0.22.1"
rand = "0.9.2"
tokio-cron-scheduler = "0.13"
cron = "0.12"
